# models/sepa_reconciliation_association.go
@@ -28,6 +28,9 @@ type SepaReconciliationAssociation struct {
 	// Format: uuid
 	OrganisationID strfmt.UUID `json:"organisation_id,omitempty"`
 
+	// relationships
+	Relationships *SepaReconciliationAssociationRelationships `json:"relationships,omitempty"`
+
 	// type
 	Type string `json:"type,omitempty"`
 
@@ -49,6 +52,10 @@ func (m *SepaReconciliationAssociation) Validate(formats strfmt.Registry) error 
 	}
 
 	if err := m.validateOrganisationID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateRelationships(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -101,6 +108,24 @@ func (m *SepaReconciliationAssociation) validateOrganisationID(formats strfmt.Re
 
 	if err := validate.FormatOf("organisation_id", "body", "uuid", m.OrganisationID.String(), formats); err != nil {
 		return err
+	}
+
+	return nil
+}
+
+func (m *SepaReconciliationAssociation) validateRelationships(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Relationships) { // not required
+		return nil
+	}
+
+	if m.Relationships != nil {
+		if err := m.Relationships.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("relationships")
+			}
+			return err
+		}
 	}
 
 	return nil
